bootcamp/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.dracula.io
      http:
        paths:
          - backend:
              serviceName: nginx-service
              servicePort: 80
